Ingress/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deploy
  labels:
    app: identity
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: identity
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: identity-pod
      labels:
        app: identity
    spec:
      containers:
        - image: madhurichinta/identity:1.0
          name: identity
          ports:
            - containerPort: 80  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-deploy
  labels:
    app: basket
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: basket
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: basket-pod
      labels:
        app: basket      
    spec:
      containers:
        - image: madhurichinta/basket:1.0
          name: basket
          ports:
            - containerPort: 80  
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deploy
  labels:
    app: catalog
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: catalog-pod
      labels:
        app: catalog      
    spec:
      containers:
        - image: madhurichinta/catalog:1.0
          name: catalog
          ports:
            - containerPort: 80  
            
                    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  labels:
    app: order
spec:
  minReadySeconds: 2
  replicas: 2
  selector:
    matchLabels:
      app: order
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: order-pod
      labels:
        app: order
    spec:
      containers:
        - image: madhurichinta/order:1.0
          name: order
          ports:
            - containerPort: 80
