Ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: identity
  name: identity-svc 
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basket
  name: basket-svc
spec:
  selector:
    app: basket
  ports:
    - protocol: TCP
      port: 80
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order
  name: order-svc 
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalog
  name: catalog-svc 
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spc
  name: spc-svc 
spec:
  selector:
    app: spc
  ports:
    - protocol: TCP
      port: 8080
